refactor: GradeService Stream 수집 방식을 .toList()로 통일